force-app/main/default/objects/Booking_Form__c/Booking_Form__c.object-meta.xml
<CustomObject>
    <description>The Booking form contains all the required information for a Booking</description>
    <label>Booking Form</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>