force-app/main/default/objects/Booking_Form__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Hotel or Guest House where the artist will sleep over</inlineHelpText>
    <label>Accommodation</label>
    <referenceTo>Accommodation__c</referenceTo>
    <relationshipLabel>Booking Forms</relationshipLabel>
    <relationshipName>Booking_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>