force-app/main/default/objects/Booking_Form__c/fields/Accommodation_Check_in_Time__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Check_in_Time__c</fullName>
    <inlineHelpText>From what time can Artist check in at Accommodation ?</inlineHelpText>
    <label>Accommodation Check in Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>