force-app/main/default/objects/Booking_Form__c/fields/Accommodation_layout__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_layout__c</fullName>
    <inlineHelpText>Eg 1 x Dubbelkamer, 2 x Enkelkamers</inlineHelpText>
    <label>Accommodation layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>