force-app/main/default/objects/Booking_Form__c/fields/Accommodation_notes__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_notes__c</fullName>
    <description>Notes on the Accommodation requirements for this booking</description>
    <label>Accommodation notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>