force-app/main/default/objects/Booking_Form__c/fields/Accomodation_Reference__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Reference__c</fullName>
    <inlineHelpText>Booking Reference for the Accommodation</inlineHelpText>
    <label>Accomodation Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>