force-app/main/default/objects/Booking_Form__c/fields/Additional_contract_notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_contract_notes__c</fullName>
    <defaultValue>&quot;Nie van toepassing&quot;</defaultValue>
    <inlineHelpText>This will appear on the contract at 2.18.</inlineHelpText>
    <label>Additional contract notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>