force-app/main/default/objects/Booking_Form__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Agent handling the booking</description>
    <label>Agent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Contacts of type &quot;Agent&quot; may be selected</errorMessage>
        <filterItems>
            <field>Contact.Agent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booking Forms</relationshipLabel>
    <relationshipName>Booking_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>