force-app/main/default/objects/Booking_Form__c/fields/Amount_of_People__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_People__c</fullName>
    <description>The Amount of people expected at the performance</description>
    <label>Amount of People</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Amount_of_People</valueSetName>
    </valueSet>
</CustomField>