force-app/main/default/objects/Booking_Form__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Artist being booked for the performance</description>
    <label>Artist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Artist__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Booking Forms</relationshipLabel>
    <relationshipName>Booking_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>