force-app/main/default/objects/Booking_Form__c/fields/Artist_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Artist_Call_Time__c</fullName>
    <inlineHelpText>What time the Artist should be back at the venue</inlineHelpText>
    <label>Artist Call Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>