force-app/main/default/objects/Booking_Form__c/fields/Artist_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Artist_Expenses__c</fullName>
    <label>Artist Expenses</label>
    <summarizedField>Artist_Expenses_Booking_Form__c.Price__c</summarizedField>
    <summaryForeignKey>Artist_Expenses_Booking_Form__c.Booking_Form__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>