force-app/main/default/objects/Booking_Form__c/fields/Artist_Name__c.field-meta.xml
<CustomField>
    <fullName>Artist_Name__c</fullName>
    <formula>Artist__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Artist Name</label>
    <type>Text</type>
</CustomField>