force-app/main/default/objects/Booking_Form__c/fields/Artist_Name_for_PDF_Butler__c.field-meta.xml
<CustomField>
    <fullName>Artist_Name_for_PDF_Butler__c</fullName>
    <description>This field is used to determine which alternative to use when generating contracts with PDF Butler. Populated by Flow</description>
    <label>Artist Name for PDF Butler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>