force-app/main/default/objects/Booking_Form__c/fields/ArtistContractName__c.field-meta.xml
<CustomField>
    <fullName>ArtistContractName__c</fullName>
    <description>This field helps PDF Butler determine which contract alternative to use</description>
    <formula>IF(CONTAINS(Artist__r.Name,&apos;Appel&apos;),&apos;Appel&apos;,
			IF(CONTAINS(Artist__r.Name,&apos;Ricus&apos;),&apos;Ricus&apos;,
						&apos;Algemeen&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ArtistContractName</label>
    <type>Text</type>
</CustomField>