force-app/main/default/objects/Booking_Form__c/fields/AutomationDateTime__c.field-meta.xml
<CustomField>
    <fullName>AutomationDateTime__c</fullName>
    <inlineHelpText>Used to byass validation and duplicate rules in Flows. Works with the ValidationBypassed filed</inlineHelpText>
    <label>AutomationDateTime</label>
    <type>DateTime</type>
</CustomField>