force-app/main/default/objects/Booking_Form__c/fields/Backline_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Backline_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The technical company supplying the backline</inlineHelpText>
    <label>Backline Supplier</label>
    <referenceTo>Technical_Supplier__c</referenceTo>
    <relationshipLabel>Booking Forms (Backline Supplier)</relationshipLabel>
    <relationshipName>Booking_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>