force-app/main/default/objects/Booking_Form__c/fields/Balance_Paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_Paid__c</fullName>
    <label>Balance Paid</label>
    <type>Date</type>
</CustomField>