force-app/main/default/objects/Booking_Form__c/fields/Band_or_Solo__c.field-meta.xml
<CustomField>
    <fullName>Band_or_Solo__c</fullName>
    <defaultValue>&quot;Solo&quot;</defaultValue>
    <description>Will the artist be performing Solo or with a Band ?</description>
    <label>Band or Solo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solo_or_with_Band</valueSetName>
    </valueSet>
</CustomField>