force-app/main/default/objects/Booking_Form__c/fields/BypassValidation__c.field-meta.xml
<CustomField>
    <fullName>BypassValidation__c</fullName>
    <formula>IF( AutomationDateTime__c &gt; NOW()-0.00005787,
true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to bypass Validation and duplicate rules</inlineHelpText>
    <label>BypassValidation</label>
    <type>Checkbox</type>
</CustomField>