force-app/main/default/objects/Booking_Form__c/fields/Callsheet_Image_Caption__c.field-meta.xml
<CustomField>
    <fullName>Callsheet_Image_Caption__c</fullName>
    <inlineHelpText>The caption that appears above the Image in the callsheet PDF</inlineHelpText>
    <label>Callsheet Image Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>