force-app/main/default/objects/Booking_Form__c/fields/Callsheet_Link_sent_manually__c.field-meta.xml
<CustomField>
    <fullName>Callsheet_Link_sent_manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if the Callsheet link has already been manually sent by the Agent. The record triggered flow : &quot;Booking Form - RT - Send Callsheet Link&quot; will not fire if this box is checked</description>
    <label>Callsheet Link sent manually</label>
    <type>Checkbox</type>
</CustomField>