force-app/main/default/objects/Booking_Form__c/fields/Contact_Email_for_tickets__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_for_tickets__c</fullName>
    <label>Contact Email for tickets</label>
    <type>Email</type>
</CustomField>