force-app/main/default/objects/Booking_Form__c/fields/Contactnumber_for_tickets__c.field-meta.xml
<CustomField>
    <fullName>Contactnumber_for_tickets__c</fullName>
    <label>Contactnumber for tickets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>