force-app/main/default/objects/Booking_Form__c/fields/Contactperson_for_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Contactperson_for_Tickets__c</fullName>
    <label>Contactperson for Tickets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>