force-app/main/default/objects/Booking_Form__c/fields/Contract_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Contract_Addendum__c</fullName>
    <inlineHelpText>If this field is filled in it will appear as an addendum at the bottom of the contract</inlineHelpText>
    <label>Contract Addendum</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>