force-app/main/default/objects/Booking_Form__c/fields/ContractExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ContractExpiryDate__c</fullName>
    <description>The Contract Exipiry Date Used by SignButler</description>
    <formula>TODAY()+3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContractExpiryDate</label>
    <type>Date</type>
</CustomField>