force-app/main/default/objects/Booking_Form__c/fields/ContractFieldsVerified__c.field-meta.xml
<CustomField>
    <fullName>ContractFieldsVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if all fields required for the contract have been verified</inlineHelpText>
    <label>ContractFieldsVerified</label>
    <type>Checkbox</type>
</CustomField>