force-app/main/default/objects/Booking_Form__c/fields/Date_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Signed__c</fullName>
    <description>The date on which a signed contract was received</description>
    <label>Date Contract Signed</label>
    <type>Date</type>
</CustomField>