force-app/main/default/objects/Booking_Form__c/fields/Date_of_Performance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Performance__c</fullName>
    <description>The date on which the performance will take place</description>
    <label>Date of Performance</label>
    <required>true</required>
    <type>Date</type>
</CustomField>