force-app/main/default/objects/Booking_Form__c/fields/DateText__c.field-meta.xml
<CustomField>
    <fullName>DateText__c</fullName>
    <description>Text Field that is updated with the Date Value before a record is saved. Used in Matching Rules</description>
    <label>DateText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>