force-app/main/default/objects/Booking_Form__c/fields/Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week__c</fullName>
    <description>Shows which day of the week the performance will be held</description>
    <formula>CASE(MOD(Date_of_Performance__c - DATE(1900, 1, 7), 7),
        0, &quot;Sondag&quot;,
        1, &quot;Maandag&quot;,
        2, &quot;Dinsdag&quot;,
        3, &quot;Woensdag&quot;,
        4, &quot;Donderdag&quot;,
        5, &quot;Vrydag&quot;,
        6, &quot;Saterdag&quot;,
        &quot;Onbekend&quot;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Week</label>
    <type>Text</type>
</CustomField>