force-app/main/default/objects/Booking_Form__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <defaultValue>0.5</defaultValue>
    <description>The Percentage of the Fee which will be the deposit</description>
    <label>Deposit [%]</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>