force-app/main/default/objects/Booking_Form__c/fields/Deposit_Due_by__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Due_by__c</fullName>
    <formula>IF(ISBLANK(Date_Contract_Signed__c),TODAY()+7,
CASE(
   MOD(Date_Contract_Signed__c - DATE(1985, 6, 24), 7),
   0, Date_Contract_Signed__c + 3 + FLOOR((2 + 3 - 1) / 5) * 2,
   1, Date_Contract_Signed__c + 3 + FLOOR((3 + 3) / 5) * 2,
   2, Date_Contract_Signed__c + 3 + FLOOR((4 + 3) / 5) * 2,
   3, Date_Contract_Signed__c + 3 + FLOOR((5 + 3) / 5) * 2,
   4, Date_Contract_Signed__c + 3 + FLOOR((6 + 3) / 5) * 2,
   5, Date_Contract_Signed__c + 3 + CEILING((1 + 3) / 5) * 2,
   6, Date_Contract_Signed__c - IF(3 &gt; 0, 1, 0) + 3 + CEILING((2 + 3) / 5) * 2,
   null
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deposit is due 5 Business Days after the contract is signed. If no contract has been signed, this date is 7 calendar days in the future</inlineHelpText>
    <label>Deposit Due by</label>
    <type>Date</type>
</CustomField>