force-app/main/default/objects/Booking_Form__c/fields/Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid__c</fullName>
    <label>Deposit Paid</label>
    <type>Date</type>
</CustomField>