force-app/main/default/objects/Booking_Form__c/fields/Description_of_Artist_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Artist_Expenses__c</fullName>
    <inlineHelpText>Description of the expenses incurred by the artist</inlineHelpText>
    <label>Description of Artist Expenses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>