force-app/main/default/objects/Booking_Form__c/fields/Dirt_Road_and_condition__c.field-meta.xml
<CustomField>
    <fullName>Dirt_Road_and_condition__c</fullName>
    <inlineHelpText>Will the Artist and crew need to travel on a dirt road, and if so, in what condition is the road ?</inlineHelpText>
    <label>Dirt Road and condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>