force-app/main/default/objects/Booking_Form__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <inlineHelpText>The discount percentage applied for this booking form. By default, discount only applies to the Performance fee</inlineHelpText>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>