force-app/main/default/objects/Booking_Form__c/fields/Discount_Technical__c.field-meta.xml
<CustomField>
    <fullName>Discount_Technical__c</fullName>
    <inlineHelpText>The discount percentage applied to the technical fee</inlineHelpText>
    <label>Discount (%) - Technical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>