force-app/main/default/objects/Booking_Form__c/fields/Driving_with__c.field-meta.xml
<CustomField>
    <fullName>Driving_with__c</fullName>
    <inlineHelpText>Eg. Ricus&apos; bakkie, Sound Engineer etc</inlineHelpText>
    <label>Driving with</label>
    <length>255</length>
    <type>Text</type>
</CustomField>