force-app/main/default/objects/Booking_Form__c/fields/Eligible_Performance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Performance_Fee__c</fullName>
    <formula>IF( Artist__r.Name = &apos;FATMAN&apos;, Performance_Fee__c - 3500, Performance_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the amount eligible for Nadia&apos;s commission after expenses</inlineHelpText>
    <label>Eligible Performance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>