force-app/main/default/objects/Booking_Form__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Only fill this in if the performance spans more than one date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>