force-app/main/default/objects/Booking_Form__c/fields/Event_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Event_Agenda__c</fullName>
    <inlineHelpText>Projected course of the event (please describe briefly). For example, will there be announcements/speeches (indicate by whom and in what capacity) before the performance? If you plan a pre-program, it must first be discussed with the Manager. Will refreshments be served? Please elaborate</inlineHelpText>
    <label>Event Agenda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>