force-app/main/default/objects/Booking_Form__c/fields/Expected_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendance__c</fullName>
    <inlineHelpText>How many guests are expected to attend ?</inlineHelpText>
    <label>Expected Attendance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>