force-app/main/default/objects/Booking_Form__c/fields/Flights__c.field-meta.xml
<CustomField>
    <fullName>Flights__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flights</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Booking Forms</relationshipLabel>
    <relationshipName>Booking_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>