force-app/main/default/objects/Booking_Form__c/fields/FlowMatchingField__c.field-meta.xml
<CustomField>
    <fullName>FlowMatchingField__c</fullName>
    <description>A Unique field that helps relate records and child records during creation in flows</description>
    <label>FlowMatchingField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>