force-app/main/default/objects/Booking_Form__c/fields/Google_Calendar_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Event_Id__c</fullName>
    <description
  >The id of the event this Booking Form is synced to on the Artist&apos;s Google Calendar. Set by the Google Calendar sync; do not edit manually.</description>
    <label>Google Calendar Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>