force-app/main/default/objects/Booking_Form__c/fields/Google_Calendar_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Sync_Error__c</fullName>
    <description
  >The most recent error, if any, from syncing this Booking Form to the Artist&apos;s Google Calendar. Cleared automatically the next time the sync succeeds.</description>
    <inlineHelpText
  >Blank means the last Google Calendar sync attempt succeeded (or none has run yet).</inlineHelpText>
    <label>Google Calendar Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>