force-app/main/default/objects/Booking_Form__c/fields/Google_Calendar_Sync_Failed__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Sync_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when the last Google Calendar sync attempt failed. Mirrors Google_Calendar_Sync_Error__c as a checkbox because Long Text Area fields can&apos;t be filtered in a SOQL WHERE clause, so this is what the failing-bookings rollup and reports filter on.</description>
    <label>Google Calendar Sync Failed</label>
    <type>Checkbox</type>
</CustomField>