force-app/main/default/objects/Booking_Form__c/fields/Id18__c.field-meta.xml
<CustomField>
    <fullName>Id18__c</fullName>
    <description>Returns an 18 digit Id of the booking form. Used in Mail Templates</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id18</label>
    <type>Text</type>
</CustomField>