force-app/main/default/objects/Booking_Form__c/fields/Include_Technical_Fee_in_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Include_Technical_Fee_in_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, the Technical fee will also be added to the total before calculating the deposit</inlineHelpText>
    <label>Include Technical Fee in Deposit</label>
    <type>Checkbox</type>
</CustomField>