force-app/main/default/objects/Booking_Form__c/fields/Include_Technical_Travel_Fee__c.field-meta.xml
<CustomField>
    <fullName>Include_Technical_Travel_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you wish to include travel costs for the Technical Company</inlineHelpText>
    <label>Include Technical Travel Fee</label>
    <type>Checkbox</type>
</CustomField>