force-app/main/default/objects/Booking_Form__c/fields/Initial_Quote__c.field-meta.xml
<CustomField>
    <fullName>Initial_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Quote that initiated this Booking Form</inlineHelpText>
    <label>Initial Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Booking Forms</relationshipLabel>
    <relationshipName>Booking_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>