force-app/main/default/objects/Booking_Form__c/fields/Is_there_a_specific_entrance__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_specific_entrance__c</fullName>
    <inlineHelpText>Is there a specific gate / entrance the artist and crew need to use ?</inlineHelpText>
    <label>Is there a specific entrance ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>