force-app/main/default/objects/Booking_Form__c/fields/Leave_By__c.field-meta.xml
<CustomField>
    <fullName>Leave_By__c</fullName>
    <inlineHelpText>What time should the Artist leave to be in time ?</inlineHelpText>
    <label>Leave By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>