force-app/main/default/objects/Booking_Form__c/fields/Lighting_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Lighting_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Technical Company Supplying the lighting</description>
    <label>Lighting Supplier</label>
    <referenceTo>Technical_Supplier__c</referenceTo>
    <relationshipLabel>Booking Forms (Lighting Supplier)</relationshipLabel>
    <relationshipName>Booking_Forms_Lighting</relationshipName>
    <type>Lookup</type>
</CustomField>