force-app/main/default/objects/Booking_Form__c/fields/Lighting_Technician__c.field-meta.xml
<CustomField>
    <fullName>Lighting_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lighting Technician</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Technical Contact as the Lighting Technician</errorMessage>
        <filterItems>
            <field>Contact.Technical__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booking Forms (Lighting Technician)</relationshipLabel>
    <relationshipName>Booking_Forms_Lighting</relationshipName>
    <type>Lookup</type>
</CustomField>