force-app/main/default/objects/Booking_Form__c/fields/Meals__c.field-meta.xml
<CustomField>
    <fullName>Meals__c</fullName>
    <description>Notes on the meal requirements for this performance</description>
    <inlineHelpText>How many people require meals ?</inlineHelpText>
    <label>Meals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>