force-app/main/default/objects/Booking_Form__c/fields/Month_And_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_And_Year__c</fullName>
    <description>Displays the Month and Year of the performance. Used for reporting</description>
    <formula>TEXT(MONTH( Date_of_Performance__c ))&amp;&quot; - &quot;&amp;TEXT(YEAR(Date_of_Performance__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month And Year</label>
    <type>Text</type>
</CustomField>