force-app/main/default/objects/Booking_Form__c/fields/Multiple_Performance_Dates__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Performance_Dates__c</fullName>
    <inlineHelpText>If the performance has more than 1 date, fill the dates in here to reflect on the contract</inlineHelpText>
    <label>Multiple Performance Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>