force-app/main/default/objects/Booking_Form__c/fields/Nature_of_Function__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Function__c</fullName>
    <inlineHelpText>eg Birthday, Festival, Fundraiser etc</inlineHelpText>
    <label>Nature of Function</label>
    <type>TextArea</type>
</CustomField>