force-app/main/default/objects/Booking_Form__c/fields/Notes_for_callsheet__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_callsheet__c</fullName>
    <inlineHelpText>Any additional information needed regarding the Peformance, Venue or Accommodation</inlineHelpText>
    <label>Notes for callsheet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>