force-app/main/default/objects/Booking_Form__c/fields/Notes_from_Client__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Client__c</fullName>
    <inlineHelpText>Notes supplied by the client when they filled in the booking request</inlineHelpText>
    <label>Notes from Client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>