force-app/main/default/objects/Booking_Form__c/fields/Online_Booking_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Online_Booking_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if an online booking form was completed for this performance. Prohibits links from being re-used</description>
    <label>Online Booking Form Completed</label>
    <type>Checkbox</type>
</CustomField>