force-app/main/default/objects/Booking_Form__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The company booking the Event</inlineHelpText>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booking Forms</relationshipLabel>
    <relationshipName>Booking_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>