force-app/main/default/objects/Booking_Form__c/fields/Organiser__c.field-meta.xml
<CustomField>
    <fullName>Organiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person booking the event</inlineHelpText>
    <label>Organiser</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an Organiser, or create a new one</errorMessage>
        <filterItems>
            <field>Contact.Organizer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booking Forms (Organiser)</relationshipLabel>
    <relationshipName>Booking_Forms2</relationshipName>
    <type>Lookup</type>
</CustomField>