force-app/main/default/objects/Booking_Form__c/fields/Performance_and_Travel_Excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Performance_and_Travel_Excl_VAT__c</fullName>
    <formula>Performance_Fee__c + 
Artist_Travel_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Performance and Travel Fees Excl VAT</inlineHelpText>
    <label>Performance and Travel Excl VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>