force-app/main/default/objects/Booking_Form__c/fields/Performance_and_Travel_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Performance_and_Travel_Incl_VAT__c</fullName>
    <formula>IF( VAT_Applicable__c,
((Performance_Fee__c + Artist_Travel_Costs__c)*$Setup.VocalEventsSettings__c.VAT__c  )+(Performance_Fee__c + Artist_Travel_Costs__c),
			Performance_Fee__c + Artist_Travel_Costs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Performance and Travel Fee Incl VAT</inlineHelpText>
    <label>Performance and Travel Incl VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>