force-app/main/default/objects/Booking_Form__c/fields/Performance_Duration_Other__c.field-meta.xml
<CustomField>
    <fullName>Performance_Duration_Other__c</fullName>
    <inlineHelpText>This field is only visible when &quot;Other&quot; is selected as a performance duration</inlineHelpText>
    <label>Performance Duration (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>