force-app/main/default/objects/Booking_Form__c/fields/Performance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Performance_Fee__c</fullName>
    <formula>Total_Performance_Fees_Before_Discount__c-(Total_Performance_Fees_Before_Discount__c *  Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Performance fee after applied discounts</inlineHelpText>
    <label>Performance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>