force-app/main/default/objects/Booking_Form__c/fields/Recordings_Prohibited__c.field-meta.xml
<CustomField>
    <fullName>Recordings_Prohibited__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I am aware that it is the Organisers responsibility to ensure that no recordings are made of the performance</inlineHelpText>
    <label>Aware of Restriction on Recordings</label>
    <type>Checkbox</type>
</CustomField>